--- a/Templates/remove.html
+++ b/Templates/remove.html
@@ -1,30 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
+{% block content %}
+<form action="" method="POST">
+    {% csrf_token %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete Mahasiswa</title>
-</head>
+    <br><br>
+    <div class="alert alert-danger" role="alert">
+        Are you sure you want to delete "{{ mahasiswas.emp_name }}"?
+    </div>
 
-<body>
-    <form action="" method="POST">
-        {% csrf_token %}
+    <p>
+        <a href="{% url 'retrieve-mahasiswa' %}">Return</a>
+    </p>
 
-        <br><br>
-        <div class="alert alert-danger" role="alert">
-            Are you sure you want to delete "{{ mahasiswas.emp_name }}"?
-        </div>
-
-        <p>
-            <a href="{% url 'retrieve-mahasiswa' %}">Return</a>
-        </p>
-
-        <p>
-            <input class="btn btn-danger" type="submit" value="Confirm">
-        </p>
-    </form>
-</body>
-
-</html>
+    <p>
+        <input class="btn btn-danger" type="submit" value="Confirm">
+    </p>
+</form>
+{% endblock %}
